# Lorica

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  FORK.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  TESTING-GUIDE.md  ci-check.Dockerfile  deny.toml  docker-compose.yml  rust-toolchain.toml  security_audit.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_api_input.rs  fuzz_ocsp_response.rs  fuzz_waf_evaluate.rs
lorica/: Cargo.toml
lorica-api/: Cargo.toml  openapi.yaml
lorica-api/src/: acme.rs  auth.rs  backends.rs  cache.rs  cert_export.rs  certificates.rs  config.rs  connections.rs  dns_providers.rs  error.rs  lib.rs  loadtest.rs  log_store.rs  logs.rs  metrics.rs  probes.rs  routes.rs  server.rs  settings.rs  sla.rs  status.rs  system.rs  tests.rs  waf.rs  workers.rs
lorica-api/src/acme/: config.rs  dns01.rs  dns01_manual.rs  expiry.rs  http01.rs  mod.rs  renewal.rs  store.rs  tests.rs  types.rs
lorica-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
lorica-api/src/routes/: cert_export.rs  crud.rs  forward_auth.rs  header_rules.rs  mirror.rs  mod.rs  mtls.rs  path_rules.rs  response_rewrite.rs  traffic_splits.rs
lorica-bench/: Cargo.toml
lorica-bench/src/: active_probes.rs  lib.rs  load_test.rs  passive_sla.rs  results.rs  scheduler.rs
lorica-bench/src/passive_sla/: bucket.rs  collector.rs  helpers.rs  mod.rs  persistence.rs  tests.rs
lorica-cache/: Cargo.toml
lorica-cache/benches/: lru_memory.rs  lru_serde.rs  simple_lru_memory.rs
lorica-cache/src/: cache_control.rs  filters.rs  lib.rs  lock.rs  max_file_size.rs  memory.rs  meta.rs  put.rs  storage.rs  trace.rs
lorica-cache/src/eviction/: lru.rs  mod.rs  simple_lru.rs
lorica-challenge/: Cargo.toml
lorica-challenge/src/: captcha.rs  cookie.rs  lib.rs  pow.rs  render.rs  secret.rs
lorica-command/: Cargo.toml
lorica-command/proto/: command.proto
lorica-command/src/: channel.rs  coalesce.rs  generation.rs  lib.rs  messages.rs  rpc.rs
lorica-config/: Cargo.toml
lorica-config/src/: crypto.rs  diff.rs  error.rs  export.rs  import.rs  lib.rs  models.rs  store.rs  tests.rs
lorica-config/src/migrations/: 001_initial.sql  002_add_health_check_path.sql  003_sla_metrics.sql  004_probe_configs.sql  005_load_tests.sql  006_sla_bucket_config_snapshot.sql  007_route_config.sql  008_backend_name_group.sql  009_cache_and_protection.sql  010_sla_default_range.sql  011_backend_h2_upstream.sql  012_route_regex_rewrite.sql  013_waf_persistence.sql  014_backend_tls_sni.sql  015_probe_results.sql  016_backend_tls_skip_verify.sql  017_acme_method.sql  018_dns_providers.sql  019_sessions.sql
lorica-config/src/models/: backend.rs  cert_export_acl.rs  certificate.rs  enums.rs  loadtest.rs  mod.rs  notification.rs  preferences.rs  probes.rs  route.rs  settings.rs  sla.rs  tests.rs
lorica-config/src/store/: backends.rs  bot_stash.rs  cert_export_acls.rs  certs.rs  dns_providers.rs  loadtest.rs  mod.rs  notifications.rs  preferences.rs  probes.rs  routes.rs  row_helpers.rs  sessions.rs  settings.rs  sla.rs  users.rs  waf.rs
lorica-core/: Cargo.toml
lorica-core/examples/: bootstrap_as_a_service.rs  client_cert.rs  service_dependencies.rs
lorica-core/src/: lib.rs
lorica-core/src/apps/: http_app.rs  mod.rs
lorica-core/src/connectors/: l4.rs  mod.rs  offload.rs
lorica-core/src/listeners/: connection_filter.rs  l4.rs  mod.rs
lorica-core/src/modules/: mod.rs
lorica-core/src/protocols/: digest.rs  mod.rs  raw_connect.rs
lorica-core/src/server/: bootstrap_services.rs  daemon.rs  mod.rs
lorica-core/src/services/: background.rs  listening.rs  mod.rs
lorica-core/tests/: server_phase_fastshutdown.rs  server_phase_gracefulshutdown.rs
lorica-dashboard/: Cargo.toml  build.rs
lorica-dashboard/frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
lorica-dashboard/src/: lib.rs  tests.rs
lorica-error/: Cargo.toml
lorica-error/src/: lib.rs
lorica-geoip/: Cargo.toml
lorica-geoip/src/: asn.rs  lib.rs  updater.rs
lorica-header-serde/: Cargo.toml
lorica-header-serde/src/: dict.rs  lib.rs  trainer.rs
lorica-http/: Cargo.toml
lorica-http/src/: lib.rs
lorica-lb/: Cargo.toml
lorica-lb/src/: background.rs  discovery.rs  health_check.rs  lib.rs
lorica-limits/: Cargo.toml
lorica-limits/benches/: benchmark.rs
lorica-limits/src/: lib.rs  token_bucket.rs
lorica-lru/: Cargo.toml
lorica-lru/benches/: bench_linked_list.rs  bench_lru.rs
lorica-memory-cache/: Cargo.toml
lorica-memory-cache/src/: read_through.rs
lorica-notify/: Cargo.toml
lorica-notify/src/: events.rs  lib.rs
lorica-pool/: Cargo.toml
lorica-pool/src/: connection.rs
lorica-proxy/: Cargo.toml
lorica-proxy/src/: lib.rs  proxy_cache.rs  proxy_custom.rs  proxy_h1.rs  proxy_h2.rs  proxy_purge.rs  proxy_trait.rs
lorica-proxy/tests/: test_basic.rs  test_upstream.rs
lorica-shmem/: Cargo.toml
lorica-shmem/src/: eviction.rs  hash.rs  lib.rs  region.rs  table.rs
lorica-shmem/tests/: multi_process.rs
lorica-tls/: Cargo.toml
lorica-tls/src/: cert_resolver.rs  lib.rs  no_debug.rs  ocsp.rs
lorica-tls/tests/: test-cert-rsa.pem  test-key-rsa-pkcs1-other.pem  test-key-rsa-pkcs1.pem  test-key-rsa-pkcs8.pem
lorica-worker/: Cargo.toml
lorica-worker/src/: fd_passing.rs  lib.rs  manager.rs
lorica/benches/: canary_bucket.rs  circuit_breaker.rs  otel_overhead.rs
lorica/src/: bot.rs  bot_rdns.rs  connection_filter.rs  geoip.rs  health.rs  lib.rs  main.rs  mtls.rs  otel.rs  proxy_wiring.rs  reload.rs
lorica/tests/: bot_rpc_cache_e2e_test.rs  canary_e2e_test.rs  config_reload_rpc_e2e_test.rs  connection_filter_test.rs  forward_auth_e2e_test.rs  header_routing_e2e_test.rs  metrics_pull_rpc_e2e_test.rs  mirror_e2e_test.rs  mtls_e2e_test.rs  proxy_config_test.rs  proxy_routing_test.rs  rate_limit_e2e_test.rs  rate_limit_sync_e2e_test.rs  response_rewrite_e2e_test.rs  swr_e2e_test.rs  verdict_breaker_rpc_e2e_test.rs
(+433 files in other folders)
