[workspace]
resolver = "2"
members = [
    "lorica",
    "lorica-core",
    "lorica-pool",
    "lorica-error",
    "lorica-limits",
    "lorica-timeout",
    "lorica-header-serde",
    "lorica-proxy",
    "lorica-http",
    "lorica-runtime",
    "lorica-tls",
    "lorica-ketama",
    "lorica-lb",
    "lorica-cache",
    "lorica-memory-cache",
    "lorica-lru",
    "tinyufo",
    "lorica-config",
    "lorica-api",
    "lorica-dashboard",
    "lorica-worker",
    "lorica-command",
    "lorica-waf",
    "lorica-notify",
    "lorica-bench",
]

[workspace.dependencies]
bstr = "1.12.0"
tokio = "1"
tokio-stream = { version = "0.1" }
async-trait = "0.1.42"
httparse = "1"
bytes = "1.0"
derivative = "2.2.0"
http = "1"
log = "0.4"
h2 = ">=0.4.11"
once_cell = "1"
lru = "0.16.3"
ahash = ">=0.8.9"

[profile.bench]
debug = true
