[package]
name = "lorica-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lorica-waf = { path = "../lorica-waf" }
lorica-config = { path = "../lorica-config" }
serde_json = "1"

[[bin]]
name = "fuzz_waf_evaluate"
path = "fuzz_targets/fuzz_waf_evaluate.rs"
doc = false

[[bin]]
name = "fuzz_api_input"
path = "fuzz_targets/fuzz_api_input.rs"
doc = false
