[package]
name = "lorica-api"
version = "0.1.1"
authors = ["Rwx-G"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/Rwx-G/Lorica"
description = "REST API for Lorica reverse proxy management"

[dependencies]
lorica-cache = { version = "0.1.0", path = "../lorica-cache" }
lorica-config = { version = "0.1.1", path = "../lorica-config" }
lorica-dashboard = { version = "0.1.1", path = "../lorica-dashboard" }
lorica-waf = { version = "0.1.0", path = "../lorica-waf" }
lorica-bench = { version = "0.1.1", path = "../lorica-bench" }
axum = { version = "0.7", features = ["multipart", "ws"] }
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
rand = "0.8"
rcgen = "0.13"
regex = "1"
ring = "0.17"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"], optional = true }
aws-sdk-route53 = { version = "1", optional = true }
sysinfo = "0.33"
thiserror = "2"
instant-acme = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
async-trait = { workspace = true }
base64 = "0.22"
dashmap = "5"
tracing = "0.1"
prometheus = "0.14"
once_cell = { workspace = true }
http = { workspace = true }

[features]
default = ["route53"]
route53 = ["aws-config", "aws-sdk-route53"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
