[package]
name = "lorica-api"
version = "1.5.2"
authors = ["Rwx-G"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/Rwx-G/Lorica"
description = "REST API for Lorica reverse proxy management"

[dependencies]
lorica-cache = { version = "0.1.0", path = "../lorica-cache" }
lorica-config = { version = "1.5.2", path = "../lorica-config" }
lorica-dashboard = { version = "1.5.2", path = "../lorica-dashboard" }
lorica-waf = { version = "0.1.0", path = "../lorica-waf" }
lorica-notify = { version = "0.1.0", path = "../lorica-notify" }
lorica-bench = { version = "1.5.2", path = "../lorica-bench" }
axum = { version = "0.7", features = ["multipart", "ws"] }
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
rand = "0.9"
rand_chacha = "0.9"
rcgen = "0.13"
regex = "1"
ring = "0.17"
# Bumped 0.16 -> 0.18 in v1.5.2 (audit L-15) for the BER/DER
# decoder fixes accumulated since 0.16. API surface used in
# `certificates.rs` + `routes/mtls.rs` (parse_x509_certificate,
# prelude::GeneralName::DNSName, prelude::ASN1Time) is stable
# across the bump.
x509-parser = "0.18"
pem = "3"
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls"], optional = true }
aws-sdk-route53 = { version = "1", optional = true }
sysinfo = "0.33"
# Linux-only. Used for `statvfs` so the System page reports disk
# usage with the same "used = total - free" semantics as `df -h`
# (sysinfo's available_space excludes reserved root blocks, which
# inflates computed "used" by ~5 % of total). `nix` is preferred
# over raw `libc` so the call stays in safe Rust - the crate-wide
# `#![deny(unsafe_code)]` stays intact.
nix = { version = "0.29", default-features = false, features = ["fs"] }
thiserror = "2"
# Bumped 0.7 -> 0.8 in v1.5.2 (audit L-15). Maintainer is djc
# (Dirkjan Ochtman, well-known crate maintainer ; low takeover
# risk). 0.8 added ACME-CAA + revoked-account error handling.
# API breaks migrated in `acme/{http01,dns01,dns01_manual}.rs` :
# Account creation goes through `AccountBuilder` ; NewOrder uses
# the `::new(&identifiers)` constructor ; authorizations are a
# stream-style iterator ; challenge readiness moved from
# `Order::set_challenge_ready(url)` to
# `ChallengeHandle::set_ready()` ; `finalize` lost its CSR arg
# in favour of a separate `finalize_csr(der)` method.
# Default features bring `aws-lc-rs` + `hyper-rustls` ; we
# pin `ring` instead to match the rest of the workspace
# (`lorica-tls`, `lorica/rustls`) so the binary does not
# carry two crypto providers in parallel. `rcgen` not needed
# (we generate the CSR with `rcgen` directly and feed it into
# `finalize_csr`).
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
async-trait = { workspace = true }
base64 = "0.22"
dashmap = "6"
tracing = "0.1"
prometheus = "0.14"
once_cell = { workspace = true }
http = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
ipnet = "2"
strum = "0.26"
tokio-util = { version = "0.7", features = ["rt"] }

[features]
# Route53 is opt-in because its dep graph drags `aws-smithy-http-client`
# which depends on the security-maintenance-only `rustls 0.21` + `hyper 0.14`
# stack. Deployments that don't use ACME DNS-01 via Route53 (the great
# majority of today's users) should not pay the compile cost nor ship that
# older TLS surface. Enable explicitly with `--features route53` when
# building from source, or uncomment the default line for downstream
# packagers that need it. See ROADMAP.md (audit SC-M-3).
default = []
route53 = ["aws-config", "aws-sdk-route53"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
# HTTP mock server for unit-testing the Cloudflare + OVH DNS
# challengers without hitting the real providers (v1.5.0 backlog
# #9). Scoped to dev so the runtime binary does not pick up the
# dep.
wiremock = "0.6"
