[package]
name = "lorica-cache"
version = "0.1.0"
authors = ["Rwx-G"]
# Original author: Yuchen Wu <yuchen@cloudflare.com> (Cloudflare Pingora)
license = "Apache-2.0"
edition = "2021"
rust-version = "1.88"
repository = "https://github.com/Rwx-G/Lorica"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "http", "cache"]
description = """
HTTP caching APIs for Lorica proxy. Forked from Pingora (experimental).
"""

[lib]
name = "lorica_cache"
path = "src/lib.rs"

[dependencies]
lorica-core = { version = "0.1.0", path = "../lorica-core", default-features = false }
lorica-error = { version = "0.1.0", path = "../lorica-error" }
lorica-header-serde = { version = "0.1.0", path = "../lorica-header-serde" }
lorica-http = { version = "0.1.0", path = "../lorica-http" }
lorica-lru = { version = "0.1.0", path = "../lorica-lru" }
lorica-timeout = { version = "0.1.0", path = "../lorica-timeout" }
bstr = { workspace = true }
http = { workspace = true }
indexmap = "1"
once_cell = { workspace = true }
regex = "1"
blake2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
bytes = { workspace = true }
httpdate = "1.0.2"
log = { workspace = true }
async-trait = { workspace = true }
parking_lot = "0.12"
rmp = "0.8.14"
tokio = { workspace = true }
lru = { workspace = true }
ahash = { workspace = true }
hex = "0.4"
httparse = { workspace = true }
strum = { version = "0.26", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tokio = { workspace = true, features = ["fs"] }
env_logger = "0.11"
futures = "0.3"

[features]
default = []
rustls = ["lorica-core/rustls"]
