[package]
name = "lorica-challenge"
version = "1.5.4"
edition = "2021"
license = "Apache-2.0"
description = "Bot-protection challenges (cookie + PoW + captcha) for Lorica"
repository = "https://github.com/Rwx-G/Lorica"

[dependencies]
# RustCrypto stack. Versions pinned to what is already in
# `Cargo.lock` transitively so the workspace stays on one copy of
# each. Bumping here should be coordinated with a full
# `cargo update -p hmac -p sha2` pass so no crate pulls two copies.
hmac = "0.12"
sha2 = "0.10"
# Constant-time byte comparison for HMAC tag verification. Using
# `==` on byte slices leaks timing; `ConstantTimeEq::ct_eq`
# guarantees branch-free equality.
subtle = "2"
# Base64url encoding on the cookie wire format. Matches the rest of
# the workspace on 0.22.
base64 = "0.22"
# CSPRNG for the HMAC secret, the PoW challenge nonce, and the
# captcha solution text. Bumped to 0.9 in v1.5.0 (RUSTSEC-2026-0097
# unsoundness when a custom logger + `rand::rng()` combine ; fixed
# in rand >= 0.9). 0.10 would also work but the surrounding
# ecosystem (argon2, rand_chacha) lags behind, so 0.9 is the path
# of least friction.
rand = "0.9"
# PNG generation for the image captcha. The `captcha` crate is pure
# Rust (no C dep) and ships its own font + mild distortion so we
# do not need to ship a font file. ~2 KiB per rendered image.
captcha = "1.0"
# Timestamp handling for cookie expiry; matches the rest of the
# workspace on 0.4.
chrono = { version = "0.4", features = ["serde"] }
# Typed errors at the public boundary so callers can distinguish
# a bad-solution reject from a genuinely-corrupt cookie.
thiserror = "2"
# Tracing for rare anomalies (HMAC rotation, cookie decode errors).
# Hot path stays event-free.
tracing = "0.1"
# Arc-swap for the hot-reloadable HMAC secret — same pattern as
# `lorica-geoip::GeoIpResolver`'s inner state.
arc-swap = "1"
# Module-static lazy init for the `ArcSwap` slot. Matches the rest
# of the workspace (lorica-api / lorica-geoip both on 1.x).
once_cell = "1"

[dev-dependencies]
# Deterministic RNG for reproducing challenge / solve cycles in
# tests without flakiness from timing-sensitive captchas.
rand_chacha = "0.9"
