[package]
name = "lorica-command"
version = "1.5.3"
authors = ["Rwx-G"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/Rwx-G/Lorica"
description = "Command channel for Lorica worker process communication"

[dependencies]
prost = "0.13"
tokio = { workspace = true, features = ["net", "io-util", "time", "sync"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
nix = { version = "~0.29", features = ["socket"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
