[package]
name = "lorica-core"
version = "0.1.0"
authors = ["Rwx-G"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/Rwx-G/Lorica"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "http", "network", "lorica"]
exclude = ["tests/*"]
description = """
Lorica's core APIs and traits for network protocols. Forked from Pingora.
"""

# Original: Cloudflare Pingora - Copyright 2024 Cloudflare, Inc.
# See NOTICE file for attribution.

[lib]
name = "lorica_core"
path = "src/lib.rs"

[dependencies]
lorica-runtime = { version = "0.1.0", path = "../lorica-runtime" }
lorica-pool = { version = "0.1.0", path = "../lorica-pool" }
lorica-error = { version = "0.1.0", path = "../lorica-error" }
lorica-timeout = { version = "0.1.0", path = "../lorica-timeout" }
lorica-http = { version = "0.1.0", path = "../lorica-http" }
lorica-tls = { version = "0.1.0", path = "../lorica-tls", optional = true }
bstr = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "signal"] }
tokio-stream = { workspace = true }
futures = "0.3"
arc-swap = "1"
async-trait = { workspace = true }
httparse = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
log = { workspace = true }
h2 = { workspace = true }
derivative.workspace = true
clap = { version = "4.5", features = ["derive"] }
once_cell = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
strum = "0.26.2"
strum_macros = "0.26.2"
libc = "0.2.70"
chrono = { version = "~0.4.31", features = ["alloc"], default-features = false }
prometheus = { version = "0.14", optional = true }
regex = "1"
percent-encoding = "2.1"
parking_lot = { version = "0.12", features = ["arc_lock"] }
socket2 = { version = ">=0.4, <1.0.0", features = ["all"] }
flate2 = { version = "1", features = ["zlib-ng"], default-features = false }
sfv = "0.10.4"
rand = "0.8"
ahash = { workspace = true }
unicase = "2"
brotli = "3"
openssl-probe = "0.1.6"
tokio-test = "0.4"
zstd = "0.13"
httpdate = "1"
x509-parser = { version = "0.16.0", optional = true }
ouroboros = { version = "0.18.4", optional = true }
lru = { workspace = true, optional = true }
daggy = "0.8"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
nix = { version = "~0.29", features = ["socket", "uio", "net", "fs", "signal", "user", "process"] }

[dev-dependencies]
h2 = { workspace = true, features = ["unstable"] }
tokio-stream = { version = "0.1", features = ["full"] }
env_logger = "0.11"
reqwest = { version = "0.12", features = ["rustls-tls-webpki-roots"], default-features = false }
rstest = "0.23.0"
rustls = "0.23"

[target.'cfg(unix)'.dev-dependencies]
hyperlocal = "0.8"
jemallocator = "0.5"

[[test]]
name = "test_basic"
required-features = ["integration-tests"]

[[test]]
name = "server_phase_fastshutdown"
required-features = ["integration-tests"]

[[test]]
name = "server_phase_gracefulshutdown"
required-features = ["integration-tests"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("openssl", "s2n"))'] }

[features]
default = []
integration-tests = []
rustls = ["lorica-tls", "any_tls", "dep:x509-parser", "ouroboros"]
patched_http1 = ["lorica-http/patched_http1"]
any_tls = []
connection_filter = []
prometheus = ["dep:prometheus"]
