[package]
name = "lorica-shmem"
version = "1.5.4"
authors = ["Rwx-G"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/Rwx-G/Lorica"
description = "Cross-worker shared-memory primitives for Lorica (anonymous memfd + atomic hashtable)"

[dependencies]
nix = { version = "~0.29", features = ["mman", "fs", "socket", "time"] }
rand = "0.9"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
nix = { version = "~0.29", features = ["mman", "fs", "socket", "time", "process", "signal"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
