[package]
name = "lorica-worker"
version = "1.5.2"
authors = ["Rwx-G"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/Rwx-G/Lorica"
description = "Process-based worker isolation for Lorica reverse proxy"

[dependencies]
nix = { version = "~0.29", features = ["socket", "uio", "signal", "process", "fs"] }
tracing = "0.1"
thiserror = "2"
socket2 = { version = "0.5", features = ["all"] }
