[package]
name = "lorica"
version = "0.3.0"
authors = ["Rwx-G"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/Rwx-G/Lorica"
description = """
A modern, secure, dashboard-first reverse proxy built in Rust.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "proxy", "http", "reverse-proxy", "lorica"]

[lib]
name = "lorica"
path = "src/lib.rs"

[[bin]]
name = "lorica"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros", "sync", "time", "net"] }
lorica-core = { version = "0.1.0", path = "../lorica-core", default-features = false }
lorica-http = { version = "0.1.0", path = "../lorica-http" }
lorica-timeout = { version = "0.1.0", path = "../lorica-timeout" }
lorica-lb = { version = "0.1.0", path = "../lorica-lb", optional = true, default-features = false }
lorica-proxy = { version = "0.1.0", path = "../lorica-proxy", optional = true, default-features = false }
lorica-config = { version = "0.3.0", path = "../lorica-config" }
lorica-api = { version = "0.3.0", path = "../lorica-api" }
lorica-error = { version = "0.1.0", path = "../lorica-error" }
lorica-tls = { version = "0.1.0", path = "../lorica-tls" }
lorica-worker = { version = "0.3.0", path = "../lorica-worker" }
lorica-command = { version = "0.3.0", path = "../lorica-command" }
lorica-waf = { version = "0.1.0", path = "../lorica-waf" }
lorica-limits = { version = "0.1.0", path = "../lorica-limits" }
lorica-cache = { version = "0.1.0", path = "../lorica-cache" }
once_cell = { workspace = true }
lorica-bench = { version = "0.3.0", path = "../lorica-bench" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
bollard = { version = "0.18", optional = true }
kube = { version = "0.98", default-features = false, features = ["client", "rustls-tls", "runtime"], optional = true }
k8s-openapi = { version = "0.24", features = ["latest"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
futures-util = "0.3"
arc-swap = "1"
dashmap = "5"
async-trait = { workspace = true }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
http = { workspace = true }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
async-trait = { workspace = true }
http = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
bytes = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["rustls", "lb", "docker", "kubernetes"]
docker = ["bollard"]
kubernetes = ["kube", "k8s-openapi"]

rustls = [
    "lorica-core/rustls",
    "lorica-proxy?/rustls",
    "lorica-lb?/rustls",
    "any_tls",
]

proxy = ["lorica-proxy"]
lb = ["lorica-lb", "proxy"]

time = []

connection_filter = [
    "lorica-core/connection_filter",
    "lorica-proxy?/connection_filter",
]

any_tls = []
patched_http1 = ["lorica-core/patched_http1"]
prometheus = ["lorica-core/prometheus"]
